@@ -20,6 +20,8 @@
 
 =========================
 09/14
+	* Corrected Smokie's pet script to use petskillbonus instead of "bonus"
+	  [Skotlex]
 	* Fixed Abyss Lake drop rates [Playtester]
 	- also updated related aegis item names
 	* Fixed Thanatos Tower drop rates [Playtester]
